src/juelParser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "#{";
  var peg$c1 = "}";
  var peg$c2 = "${";
  var peg$c3 = "\\$";
  var peg$c4 = "\\#";
  var peg$c5 = "\\\\";
  var peg$c6 = "?";
  var peg$c7 = ":";
  var peg$c8 = "||";
  var peg$c9 = "or";
  var peg$c10 = "&&";
  var peg$c11 = "and";
  var peg$c12 = "==";
  var peg$c13 = "!=";
  var peg$c14 = "eq";
  var peg$c15 = "ne";
  var peg$c16 = "<=";
  var peg$c17 = ">=";
  var peg$c18 = "lt";
  var peg$c19 = "gt";
  var peg$c20 = "le";
  var peg$c21 = "ge";
  var peg$c22 = "instanceof";
  var peg$c23 = "div";
  var peg$c24 = "mod";
  var peg$c25 = "-";
  var peg$c26 = "!";
  var peg$c27 = "not";
  var peg$c28 = "empty";
  var peg$c29 = ".";
  var peg$c30 = "[";
  var peg$c31 = "]";
  var peg$c32 = "(";
  var peg$c33 = ")";
  var peg$c34 = ",";
  var peg$c35 = "null";
  var peg$c36 = "true";
  var peg$c37 = "false";
  var peg$c38 = "'";
  var peg$c39 = "\"";
  var peg$c40 = "\\'";
  var peg$c41 = "\\\"";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[%*\/]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[eE]/;
  var peg$r5 = /^[^'\\]/;
  var peg$r6 = /^[^"\\]/;
  var peg$r7 = /^[a-zA-Z_$]/;
  var peg$r8 = /^[a-zA-Z0-9_$]/;
  var peg$r9 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("#{", false);
  var peg$e1 = peg$literalExpectation("}", false);
  var peg$e2 = peg$literalExpectation("${", false);
  var peg$e3 = peg$literalExpectation("\\$", false);
  var peg$e4 = peg$literalExpectation("\\#", false);
  var peg$e5 = peg$literalExpectation("\\\\", false);
  var peg$e6 = peg$anyExpectation();
  var peg$e7 = peg$literalExpectation("?", false);
  var peg$e8 = peg$literalExpectation(":", false);
  var peg$e9 = peg$literalExpectation("||", false);
  var peg$e10 = peg$literalExpectation("or", true);
  var peg$e11 = peg$literalExpectation("&&", false);
  var peg$e12 = peg$literalExpectation("and", true);
  var peg$e13 = peg$literalExpectation("==", false);
  var peg$e14 = peg$literalExpectation("!=", false);
  var peg$e15 = peg$literalExpectation("eq", true);
  var peg$e16 = peg$literalExpectation("ne", true);
  var peg$e17 = peg$literalExpectation("<=", false);
  var peg$e18 = peg$literalExpectation(">=", false);
  var peg$e19 = peg$classExpectation(["<", ">"], false, false);
  var peg$e20 = peg$literalExpectation("lt", true);
  var peg$e21 = peg$literalExpectation("gt", true);
  var peg$e22 = peg$literalExpectation("le", true);
  var peg$e23 = peg$literalExpectation("ge", true);
  var peg$e24 = peg$literalExpectation("instanceof", true);
  var peg$e25 = peg$classExpectation(["+", "-"], false, false);
  var peg$e26 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e27 = peg$literalExpectation("div", true);
  var peg$e28 = peg$literalExpectation("mod", true);
  var peg$e29 = peg$literalExpectation("-", false);
  var peg$e30 = peg$literalExpectation("!", false);
  var peg$e31 = peg$literalExpectation("not", true);
  var peg$e32 = peg$literalExpectation("empty", true);
  var peg$e33 = peg$literalExpectation(".", false);
  var peg$e34 = peg$literalExpectation("[", false);
  var peg$e35 = peg$literalExpectation("]", false);
  var peg$e36 = peg$literalExpectation("(", false);
  var peg$e37 = peg$literalExpectation(")", false);
  var peg$e38 = peg$literalExpectation(",", false);
  var peg$e39 = peg$literalExpectation("null", true);
  var peg$e40 = peg$literalExpectation("true", true);
  var peg$e41 = peg$literalExpectation("false", true);
  var peg$e42 = peg$otherExpectation("number");
  var peg$e43 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e44 = peg$classExpectation(["e", "E"], false, false);
  var peg$e45 = peg$literalExpectation("'", false);
  var peg$e46 = peg$literalExpectation("\"", false);
  var peg$e47 = peg$literalExpectation("\\'", false);
  var peg$e48 = peg$classExpectation(["'", "\\"], true, false);
  var peg$e49 = peg$literalExpectation("\\\"", false);
  var peg$e50 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e51 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false);
  var peg$e52 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "$"], false, false);
  var peg$e53 = peg$otherExpectation("whitespace");
  var peg$e54 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(parts) {
      return parts.length === 1 ? parts[0] : { type: 'CompositeExpression', parts, location: loc() };
    };
  var peg$f1 = function(expr) {
      return { type: 'DeferredExpression', body: expr, location: loc() };
    };
  var peg$f2 = function(expr) {
      return { type: 'DynamicExpression', body: expr, location: loc() };
    };
  var peg$f3 = function(chars) {
      return { type: 'LiteralExpression', value: chars.join(''), location: loc() };
    };
  var peg$f4 = function() { return '$'; };
  var peg$f5 = function() { return '#'; };
  var peg$f6 = function() { return '\\'; };
  var peg$f7 = function(c) { return c; };
  var peg$f8 = function(condition, consequent, alternate) {
      return { type: 'Ternary', condition, consequent, alternate, location: loc() };
    };
  var peg$f9 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression', operator: '||', left, right, location: loc()
      }), head);
    };
  var peg$f10 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression', operator: '&&', left, right, location: loc()
      }), head);
    };
  var peg$f11 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression',
        operator: (op === 'eq' || op === 'EQ' || op === 'Eq') ? '==' : (op === 'ne' || op === 'NE' || op === 'Ne') ? '!=' : op,
        left, right, location: loc()
      }), head);
    };
  var peg$f12 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression', operator: op.toLowerCase(), left, right, location: loc()
      }), head);
    };
  var peg$f13 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression', operator: op, left, right, location: loc()
      }), head);
    };
  var peg$f14 = function(head, tail) {
      return tail.reduce((left, [, op, , right]) => ({
        type: 'BinaryExpression', operator: op.toLowerCase(), left, right, location: loc()
      }), head);
    };
  var peg$f15 = function(expr) {
      return { type: 'UnaryExpression', operator: '-', argument: expr, location: loc() };
    };
  var peg$f16 = function(expr) {
      return { type: 'UnaryExpression', operator: '!', argument: expr, location: loc() };
    };
  var peg$f17 = function(expr) {
      return { type: 'UnaryExpression', operator: 'empty', argument: expr, location: loc() };
    };
  var peg$f18 = function(head, id) { return { type: 'dot', property: id }; };
  var peg$f19 = function(head, expr) { return { type: 'bracket', property: expr }; };
  var peg$f20 = function(head, args) { return { type: 'call', arguments: args }; };
  var peg$f21 = function(head, tail) {
      return tail.reduce((object, access) => {
        if (access.type === 'dot') {
          return { type: 'MemberExpression', object, property: access.property, computed: false, location: loc() };
        } else if (access.type === 'bracket') {
          return { type: 'MemberExpression', object, property: access.property, computed: true, location: loc() };
        } else {
          return { type: 'CallExpression', callee: object, arguments: access.arguments, location: loc() };
        }
      }, head);
    };
  var peg$f22 = function(head, tail) {
      return [head, ...tail.map(t => t[3])];
    };
  var peg$f23 = function() { return []; };
  var peg$f24 = function(expr) { return expr; };
  var peg$f25 = function() {
      return { type: 'Literal', value: null, location: loc() };
    };
  var peg$f26 = function() {
      return { type: 'Literal', value: true, location: loc() };
    };
  var peg$f27 = function() {
      return { type: 'Literal', value: false, location: loc() };
    };
  var peg$f28 = function(text) {
      return { type: 'Literal', value: parseFloat(text), location: loc() };
    };
  var peg$f29 = function(whole, frac, exp) {
      let s = whole.join('');
      if (frac) s += '.' + (frac[1] ? frac[1].join('') : '');
      if (exp) s += exp;
      return s;
    };
  var peg$f30 = function(digits, exp) {
      let s = '.' + digits.join('');
      if (exp) s += exp;
      return s;
    };
  var peg$f31 = function(sign, digits) {
      return 'e' + (sign || '') + digits.join('');
    };
  var peg$f32 = function(chars) {
      return { type: 'Literal', value: chars.join(''), location: loc() };
    };
  var peg$f33 = function(chars) {
      return { type: 'Literal', value: chars.join(''), location: loc() };
    };
  var peg$f34 = function() { return "'"; };
  var peg$f35 = function() { return "\\"; };
  var peg$f36 = function() { return '"'; };
  var peg$f37 = function() { return "\\"; };
  var peg$f38 = function(head, tail) {
      return { type: 'Identifier', name: head + tail.join(''), location: loc() };
    };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsePart();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsePart();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsePart() {
    var s0;

    s0 = peg$parseDeferredExpression();
    if (s0 === peg$FAILED) {
      s0 = peg$parseDynamicExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseLiteralExpression();
      }
    }

    return s0;
  }

  function peg$parseDeferredExpression() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseTernary();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDynamicExpression() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseTernary();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLiteralExpression() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLiteralChar();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseLiteralChar();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseLiteralChar() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f4();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f5();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c5) {
          s1 = peg$c5;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f6();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$currPos;
          peg$silentFails++;
          if (input.substr(peg$currPos, 2) === peg$c2) {
            s2 = peg$c2;
            peg$currPos += 2;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s2 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c0) {
              s2 = peg$c0;
              peg$currPos += 2;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e0); }
            }
          }
          peg$silentFails--;
          if (s2 === peg$FAILED) {
            s1 = undefined;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
          if (s1 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s2 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f7(s2);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTernary() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseOr();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 63) {
        s3 = peg$c6;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseTernary();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 58) {
            s7 = peg$c7;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseTernary();
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f8(s1, s5, s9);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseOr();
    }

    return s0;
  }

  function peg$parseOr() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
